--- a/src/output.css
+++ b/src/output.css
@@ -777,6 +777,10 @@ video {
   background-size: cover;
 }
 
+.bg-center {
+  background-position: center;
+}
+
 .bg-no-repeat {
   background-repeat: no-repeat;
 }
@@ -929,6 +933,45 @@ body {
   color: rgb(250 250 250 / var(--tw-text-opacity));
 }
 
+@media not all and (min-width: 1280px) {
+  .max-xl\:ml-14 {
+    margin-left: 3.5rem;
+  }
+
+  .max-xl\:mb-6 {
+    margin-bottom: 1.5rem;
+  }
+
+  .max-xl\:max-h-\[500px\] {
+    max-height: 500px;
+  }
+
+  .max-xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .max-xl\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media not all and (min-width: 1024px) {
+  .max-lg\:ml-14 {
+    margin-left: 3.5rem;
+  }
+
+  .max-lg\:max-h-\[500px\] {
+    max-height: 500px;
+  }
+
+  .max-lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
 @media not all and (min-width: 768px) {
   .max-md\:col-start-1 {
     grid-column-start: 1;
@@ -950,6 +993,14 @@ body {
     margin-left: 0.25rem;
   }
 
+  .max-md\:ml-7 {
+    margin-left: 1.75rem;
+  }
+
+  .max-md\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
   .max-md\:block {
     display: block;
   }
@@ -966,6 +1017,10 @@ body {
     display: none;
   }
 
+  .max-md\:max-h-96 {
+    max-height: 24rem;
+  }
+
   .max-md\:grid-cols-\[1fr_auto_auto\] {
     grid-template-columns: 1fr auto auto;
   }
@@ -980,11 +1035,6 @@ body {
     margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .max-md\:bg-red-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-  }
-
   .max-md\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
@@ -994,128 +1044,14 @@ body {
     font-size: 3rem;
     line-height: 1;
   }
-}
 
-@media not all and (min-width: 640px) {
-  .max-sm\:col-start-1 {
-    grid-column-start: 1;
+  .max-md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
-  .max-sm\:col-start-2 {
-    grid-column-start: 2;
-  }
-
-  .max-sm\:col-start-3 {
-    grid-column-start: 3;
-  }
-
-  .max-sm\:row-start-1 {
-    grid-row-start: 1;
-  }
-
-  .max-sm\:ml-1 {
-    margin-left: 0.25rem;
-  }
-
-  .max-sm\:block {
-    display: block;
-  }
-
-  .max-sm\:flex {
-    display: flex;
-  }
-
-  .max-sm\:grid {
-    display: grid;
-  }
-
-  .max-sm\:hidden {
-    display: none;
-  }
-
-  .max-sm\:grid-cols-\[1fr_auto_auto\] {
-    grid-template-columns: 1fr auto auto;
-  }
-
-  .max-sm\:grid-rows-2 {
-    grid-template-rows: repeat(2, minmax(0, 1fr));
-  }
-
-  .max-sm\:space-x-1 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-    margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .max-sm\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
-  .max-sm\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:col-start-1 {
-    grid-column-start: 1;
-  }
-
-  .md\:col-start-2 {
-    grid-column-start: 2;
-  }
-
-  .md\:col-start-3 {
-    grid-column-start: 3;
-  }
-
-  .md\:row-start-1 {
-    grid-row-start: 1;
-  }
-
-  .md\:ml-1 {
-    margin-left: 0.25rem;
-  }
-
-  .md\:block {
-    display: block;
-  }
-
-  .md\:flex {
-    display: flex;
-  }
-
-  .md\:grid {
-    display: grid;
-  }
-
-  .md\:hidden {
-    display: none;
-  }
-
-  .md\:grid-cols-\[1fr_auto_auto\] {
-    grid-template-columns: 1fr auto auto;
-  }
-
-  .md\:grid-rows-2 {
-    grid-template-rows: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:space-x-1 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-    margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
+  .max-md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
