--- a/src/output.css
+++ b/src/output.css
@@ -660,6 +660,14 @@ video {
   height: 100%;
 }
 
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[300px\] {
+  height: 300px;
+}
+
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -769,8 +777,34 @@ video {
   background-color: transparent;
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-red-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(69 10 10 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'\.\/assets\/home-page\.jpg\'\)\] {
   background-image: url('./assets/home-page.jpg');
+}
+
+.bg-\[url\(\'\.\.\/\.\.\/assets\/home-men\.jpg\'\)\] {
+  background-image: url('../../assets/home-men.jpg');
+}
+
+.bg-\[url\(\'\.\.\/\.\.\/assets\/\'\)\] {
+  background-image: url('../../assets/');
+}
+
+.bg-\[url\(\$\{foto\}\)\] {
+  background-image: url(${foto});
+}
+
+.bg-\[url\(\'\.\/assets\/home-men\.jpg\'\)\] {
+  background-image: url('./assets/home-men.jpg');
 }
 
 .bg-cover {
@@ -779,6 +813,14 @@ video {
 
 .bg-center {
   background-position: center;
+}
+
+.bg-right {
+  background-position: right;
+}
+
+.bg-left {
+  background-position: left;
 }
 
 .bg-no-repeat {
@@ -942,8 +984,24 @@ body {
     margin-bottom: 1.5rem;
   }
 
+  .max-xl\:h-\[360px\] {
+    height: 360px;
+  }
+
+  .max-xl\:h-\[400px\] {
+    height: 400px;
+  }
+
+  .max-xl\:h-\[500px\] {
+    height: 500px;
+  }
+
   .max-xl\:max-h-\[500px\] {
     max-height: 500px;
+  }
+
+  .max-xl\:max-h-\[460px\] {
+    max-height: 460px;
   }
 
   .max-xl\:text-xl {
@@ -962,6 +1020,10 @@ body {
     margin-left: 3.5rem;
   }
 
+  .max-lg\:mb-16 {
+    margin-bottom: 4rem;
+  }
+
   .max-lg\:max-h-\[500px\] {
     max-height: 500px;
   }
@@ -969,6 +1031,11 @@ body {
   .max-lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .max-lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
@@ -1001,6 +1068,10 @@ body {
     margin-bottom: 0.75rem;
   }
 
+  .max-md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
   .max-md\:block {
     display: block;
   }
@@ -1021,12 +1092,24 @@ body {
     max-height: 24rem;
   }
 
+  .max-md\:max-h-72 {
+    max-height: 18rem;
+  }
+
   .max-md\:grid-cols-\[1fr_auto_auto\] {
     grid-template-columns: 1fr auto auto;
   }
 
   .max-md\:grid-rows-2 {
     grid-template-rows: repeat(2, minmax(0, 1fr));
+  }
+
+  .max-md\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .max-md\:gap-4 {
+    gap: 1rem;
   }
 
   .max-md\:space-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1038,6 +1121,11 @@ body {
   .max-md\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
+  }
+
+  .max-md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .max-md\:text-5xl {
@@ -1053,5 +1141,21 @@ body {
   .max-md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .max-md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+@media not all and (min-width: 640px) {
+  .max-sm\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .max-sm\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
