--- a/src/output.css
+++ b/src/output.css
@@ -554,16 +554,8 @@ video {
   --tw-contain-style:  ;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
-}
-
-.-z-10 {
-  z-index: -10;
 }
 
 .col-span-3 {
@@ -624,6 +616,14 @@ video {
   margin-left: 0.75rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .block {
   display: block;
 }
@@ -640,10 +640,6 @@ video {
   display: none;
 }
 
-.h-\[288px\] {
-  height: 288px;
-}
-
 .h-\[521px\] {
   height: 521px;
 }
@@ -658,14 +654,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-\[500px\] {
-  height: 500px;
-}
-
-.h-\[300px\] {
-  height: 300px;
 }
 
 .w-fit {
@@ -701,8 +689,8 @@ video {
   grid-template-columns: repeat(3,minmax(0,406px));
 }
 
-.grid-cols-\[repeat\(4\2c minmax\(0\2c 220px\)\)\] {
-  grid-template-columns: repeat(4,minmax(0,220px));
+.grid-cols-\[repeat\(4\2c minmax\(64px\2c 220px\)\)\] {
+  grid-template-columns: repeat(4,minmax(64px,220px));
 }
 
 .flex-col {
@@ -777,34 +765,12 @@ video {
   background-color: transparent;
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-red-950 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(69 10 10 / var(--tw-bg-opacity));
+.bg-\[url\(\'\.\/assets\/home-men\.jpg\'\)\] {
+  background-image: url('./assets/home-men.jpg');
 }
 
 .bg-\[url\(\'\.\/assets\/home-page\.jpg\'\)\] {
   background-image: url('./assets/home-page.jpg');
-}
-
-.bg-\[url\(\'\.\.\/\.\.\/assets\/home-men\.jpg\'\)\] {
-  background-image: url('../../assets/home-men.jpg');
-}
-
-.bg-\[url\(\'\.\.\/\.\.\/assets\/\'\)\] {
-  background-image: url('../../assets/');
-}
-
-.bg-\[url\(\$\{foto\}\)\] {
-  background-image: url(${foto});
-}
-
-.bg-\[url\(\'\.\/assets\/home-men\.jpg\'\)\] {
-  background-image: url('./assets/home-men.jpg');
 }
 
 .bg-cover {
@@ -813,14 +779,6 @@ video {
 
 .bg-center {
   background-position: center;
-}
-
-.bg-right {
-  background-position: right;
-}
-
-.bg-left {
-  background-position: left;
 }
 
 .bg-no-repeat {
@@ -864,6 +822,16 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .pr-14 {
@@ -953,6 +921,7 @@ video {
 
 body {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 .hover\:bg-neutral-200:hover {
@@ -976,37 +945,24 @@ body {
 }
 
 @media not all and (min-width: 1280px) {
-  .max-xl\:ml-14 {
-    margin-left: 3.5rem;
-  }
-
   .max-xl\:mb-6 {
     margin-bottom: 1.5rem;
   }
 
-  .max-xl\:h-\[360px\] {
-    height: 360px;
-  }
-
-  .max-xl\:h-\[400px\] {
-    height: 400px;
-  }
-
-  .max-xl\:h-\[500px\] {
-    height: 500px;
-  }
-
-  .max-xl\:max-h-\[500px\] {
-    max-height: 500px;
+  .max-xl\:ml-14 {
+    margin-left: 3.5rem;
   }
 
   .max-xl\:max-h-\[460px\] {
     max-height: 460px;
   }
 
-  .max-xl\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .max-xl\:max-h-\[500px\] {
+    max-height: 500px;
+  }
+
+  .max-xl\:gap-10 {
+    gap: 2.5rem;
   }
 
   .max-xl\:text-base {
@@ -1016,26 +972,27 @@ body {
 }
 
 @media not all and (min-width: 1024px) {
-  .max-lg\:ml-14 {
-    margin-left: 3.5rem;
-  }
-
   .max-lg\:mb-16 {
     margin-bottom: 4rem;
   }
 
-  .max-lg\:max-h-\[500px\] {
-    max-height: 500px;
+  .max-lg\:mb-20 {
+    margin-bottom: 5rem;
   }
 
-  .max-lg\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .max-lg\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 
   .max-lg\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .max-lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -1056,6 +1013,14 @@ body {
     grid-row-start: 1;
   }
 
+  .max-md\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
+  .max-md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
   .max-md\:ml-1 {
     margin-left: 0.25rem;
   }
@@ -1064,12 +1029,8 @@ body {
     margin-left: 1.75rem;
   }
 
-  .max-md\:mb-3 {
-    margin-bottom: 0.75rem;
-  }
-
-  .max-md\:mb-8 {
-    margin-bottom: 2rem;
+  .max-md\:mb-5 {
+    margin-bottom: 1.25rem;
   }
 
   .max-md\:block {
@@ -1088,28 +1049,36 @@ body {
     display: none;
   }
 
-  .max-md\:max-h-96 {
-    max-height: 24rem;
-  }
-
   .max-md\:max-h-72 {
     max-height: 18rem;
+  }
+
+  .max-md\:max-h-96 {
+    max-height: 24rem;
   }
 
   .max-md\:grid-cols-\[1fr_auto_auto\] {
     grid-template-columns: 1fr auto auto;
   }
 
+  .max-md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .max-md\:grid-rows-2 {
     grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
-  .max-md\:gap-5 {
-    gap: 1.25rem;
+  .max-md\:gap-2 {
+    gap: 0.5rem;
   }
 
   .max-md\:gap-4 {
     gap: 1rem;
+  }
+
+  .max-md\:gap-3 {
+    gap: 0.75rem;
   }
 
   .max-md\:space-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1128,9 +1097,9 @@ body {
     padding-right: 2rem;
   }
 
-  .max-md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
+  .max-md\:px-1 {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
   }
 
   .max-md\:text-2xl {
@@ -1138,18 +1107,31 @@ body {
     line-height: 2rem;
   }
 
+  .max-md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
   .max-md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
 
-  .max-md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+  .max-md\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
 @media not all and (min-width: 640px) {
+  .max-sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .max-sm\:gap-1 {
+    gap: 0.25rem;
+  }
+
   .max-sm\:gap-2 {
     gap: 0.5rem;
   }
@@ -1157,5 +1139,10 @@ body {
   .max-sm\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .max-sm\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
