--- a/src/output.css
+++ b/src/output.css
@@ -562,6 +562,10 @@ video {
   grid-column: span 3 / span 3;
 }
 
+.col-span-full {
+  grid-column: 1 / -1;
+}
+
 .row-start-2 {
   grid-row-start: 2;
 }
@@ -657,6 +661,18 @@ video {
   width: 100%;
 }
 
+.min-w-32 {
+  min-width: 8rem;
+}
+
+.min-w-48 {
+  min-width: 12rem;
+}
+
+.max-w-48 {
+  max-width: 12rem;
+}
+
 .max-w-\[34ch\] {
   max-width: 34ch;
 }
@@ -665,8 +681,16 @@ video {
   max-width: 36ch;
 }
 
+.max-w-60 {
+  max-width: 15rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.flex-shrink {
+  flex-shrink: 1;
 }
 
 .cursor-pointer {
@@ -685,8 +709,40 @@ video {
   grid-template-columns: repeat(4,minmax(64px,220px));
 }
 
+.grid-cols-\[repeat\(auto-fill\2c minmax\(min-w-32\2c 240px\)\)\] {
+  grid-template-columns: repeat(auto-fill,minmax(min - w - 32,240px));
+}
+
+.grid-cols-\[repeat\(4\2c minmax\(min-w-32\2c 240px\)\)\] {
+  grid-template-columns: repeat(4,minmax(min - w - 32,240px));
+}
+
+.grid-cols-\[repeat\(auto\2c minmax\(min-w-32\2c 240px\)\)\] {
+  grid-template-columns: repeat(auto,minmax(min - w - 32,240px));
+}
+
+.grid-cols-\[repeat\(auto-fill\2c minmax\(120px\2c 240px\)\)\] {
+  grid-template-columns: repeat(auto-fill,minmax(120px,240px));
+}
+
+.grid-cols-\[repeat\(4\2c minmax\(120px\2c 240px\)\)\] {
+  grid-template-columns: repeat(4,minmax(120px,240px));
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-\[repeat\(3\2c minmax\(120px\2c 240px\)\)\] {
+  grid-template-columns: repeat(3,minmax(120px,240px));
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -701,6 +757,10 @@ video {
   justify-content: space-between;
 }
 
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
 .gap-10 {
   gap: 2.5rem;
 }
@@ -711,6 +771,24 @@ video {
 
 .gap-32 {
   gap: 8rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-x-20 {
+  -moz-column-gap: 5rem;
+       column-gap: 5rem;
+}
+
+.gap-x-10 {
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+}
+
+.gap-y-5 {
+  row-gap: 1.25rem;
 }
 
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
@@ -725,8 +803,30 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.justify-self-end {
+  justify-self: end;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-b {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.rounded-t {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
 }
 
 .border {
@@ -755,6 +855,16 @@ video {
 
 .bg-transparent {
   background-color: transparent;
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\.\/assets\/home-men\.jpg\'\)\] {
@@ -796,6 +906,11 @@ video {
   padding-right: 1rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -819,6 +934,11 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .pr-14 {
@@ -852,6 +972,16 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-medium {
@@ -899,6 +1029,30 @@ video {
 .text-neutral-950 {
   --tw-text-opacity: 1;
   color: rgb(10 10 10 / var(--tw-text-opacity));
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline-none {
@@ -969,6 +1123,10 @@ body {
 
   .max-lg\:gap-16 {
     gap: 4rem;
+  }
+
+  .max-lg\:gap-5 {
+    gap: 1.25rem;
   }
 
   .max-lg\:px-2 {
@@ -1073,6 +1231,10 @@ body {
     grid-template-columns: 1fr auto auto;
   }
 
+  .max-md\:grid-cols-\[repeat\(3\2c minmax\(120px\2c 240px\)\)\] {
+    grid-template-columns: repeat(3,minmax(120px,240px));
+  }
+
   .max-md\:grid-rows-2 {
     grid-template-rows: repeat(2, minmax(0, 1fr));
   }
@@ -1157,6 +1319,14 @@ body {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .max-sm\:grid-cols-\[repeat\(3\2c minmax\(120px\2c 240px\)\)\] {
+    grid-template-columns: repeat(3,minmax(120px,240px));
+  }
+
+  .max-sm\:grid-cols-\[repeat\(2\2c minmax\(120px\2c 240px\)\)\] {
+    grid-template-columns: repeat(2,minmax(120px,240px));
+  }
+
   .max-sm\:gap-2 {
     gap: 0.5rem;
   }
@@ -1174,5 +1344,11 @@ body {
   .max-sm\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:gap-5 {
+    gap: 1.25rem;
   }
 }
